force-app/main/default/objects/RC_SMS_Job__c/RC_SMS_Job__c.object-meta.xml
<CustomObject>
    <label>RC SMS Job</label>
    <nameField>
        <displayFormat>RCJ-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RC SMS Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>