force-app/main/default/objects/RC_SMS_Job__c/fields/ClinicAddress__c.field-meta.xml
<CustomField>
    <fullName>ClinicAddress__c</fullName>
    <label>Clinic Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>