force-app/main/default/objects/RC_SMS_Job__c/fields/From_Account__c.field-meta.xml
<CustomField>
    <fullName>From_Account__c</fullName>
    <label>From Account Lookup</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>From_Account_Relationship</relationshipName>
    <metadata>
        <fieldMapping>
            <type>Lookup</type>
            <mapFrom>FromAccount__c</mapFrom>
            <mapTo>Id</mapTo>
        </fieldMapping>
    </metadata>
</CustomField>