force-app/main/default/objects/RC_SMS_Job__c/fields/Send_At__c.field-meta.xml
<CustomField>
    <fullName>Send_At__c</fullName>
    <label>Send At</label>
    <type>DateTime</type>
</CustomField>