force-app/main/default/objects/RC_SMS_Job__c/fields/SMS_Sequence_Template__c.field-meta.xml
<CustomField>
    <fullName>SMS_Sequence_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sequence</label>
    <referenceTo>RC_SMS_Sequence_Template__c</referenceTo>
    <relationshipName>SMS_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>