force-app/main/default/objects/RC_SMS_Job__c/fields/To_Contact__c.field-meta.xml
<CustomField>
    <fullName>To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RC SMS Jobs</relationshipLabel>
    <relationshipName>RC_SMS_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>