force-app/main/default/objects/RC_SMS_Job__c/fields/ToContact__c.field-meta.xml
<CustomField>
    <fullName>ToContact__c</fullName>
    <label>To Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>